--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
-    "mongoose": "^7.0.1",
+    "helmet": "^6.0.1",
+    "mongoose": "^5.12.1",
     "morgan": "^1.10.0"
   }
 }
